# invectio

./: .aicoe-ci.yaml  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  CHANGELOG.md  OWNERS  Pipfile  README.rst  invectio-cli  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: deliver_missing_module.md  redeliver_container_image.md
invectio/: __about__.py  __init__.py  cli.py  lib.py
tests/: lib_test.py  test_lib.py
tests/data/: app_0_test.py  app_1.py  app_1_test.py  app_2_test.py  app_3.py  app_4.py  app_5.py  app_6.py  app_7.py  app_7_test.py  app_8.py  app_8_test.py  app_9_test.py  lstm.py  lstm_test.py
tests/data/project_dir/: main.py  main_test.py
tests/data/project_dir/proj/: __init__.py  model_test.py
