[metadata]
name = invectio
version = attr: invectio.__init__.__version__
url = https://github.com/fridex/invectio
description = Statically analyze sources and extract information about called library functions in Python applications
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Fridolin Pokorny
author_email = fridex.devel@gmail.com
license = GPLv3+
license_file = LICENSE
classifiers =
    Operating System :: POSIX :: Linux
    Topic :: Software Development
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

keywords =
    static source code analysis
    source code
    libraries

[options]
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    invectio=invectio.cli:cli
